kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      #nodeName: minikube
      nodeSelector:
        web-server: nginx
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
          - containerPort: 8000
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - name: nginx-config
              mountPath: /homework
          lifecycle:
            postStart:
              exec:
                #command: ["/bin/sh","-c","echo 'server { listen 8000; location / { root /homework; index index.html; } }' > /etc/nginx/conf.d/default.conf; nginx -s reload"]
                command: 
                - "sh"
                - "-c"
                - echo 'server { listen 8000; location / { root /homework; index index.html; } }' > /etc/nginx/conf.d/default.conf
                - nginx -s reload
            preStop:
              exec:
                command: ["/bin/sh","-c","rm /homework/index.html"]
          livenessProbe:
            httpGet:
              path: /
              port: 8000
              #initialDelaySeconds: 3
              #periodSeconds: 3
      volumes:
        - name: nginx-config
          emptyDir: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
