kubernetes-networks/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: homework
spec:
  selector:
    #app.kubernetes.io/name: nginx-deployment
    app: nginx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
